2004-10-02 Bart Hakvoort  <gparted@users.sf.net>

	* src/VBox_VisualDisk.cc: fixed incorrect tooltip with unallocated space

2004-10-02 Bart Hakvoort  <gparted@users.sf.net>

	* include/Dialog_Base_Partition.h,
	  src/Dialog_Base_Partition.cc: added void Set_MinMax_Text( long min, long max )
	* src/Dialog_Partition_Copy.cc: fix incorrect upper limit for fat16 in label
	* src/Dialog_Partition_New.cc: make use of this function, instead of accessing the label directly 
	* src/Dialog_Partition_Resize_Move.cc: fix incorrect upper limit for fat16 in label

2004-10-02 Bart Hakvoort  <gparted@users.sf.net>

	* removed all stringstreams from the project (they were possibly responsible for rare chrashes in certain locales)
	Note that i left 1 in include/Partition.h, this one is needed for int-->string conversions and won't pose a thread.

2004-10-01 Bart Hakvoort  <gparted@users.sf.net>

	* almost all files: cosmetics (mostly tabfixes)

2004-10-01 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_Partition_New.cc: marked 3 strings for translation.
	* src/Operation.cc: fixed an i18n related crasher and did some cosmetic cleanups.

2004-10-01 Bart Hakvoort  <gparted@users.sf.net>

	* src/Dialog_About.cc,
	  src/TreeView_Detail.cc: minor changes to a few strings

2004-10-01 Hendrik Brandt  <hebra@cvs.gnome.org>

	* configure.in: added "de" (German) to ALL_LINGUAS

2004-09-30 Bart Hakvoort  <gparted@users.sf.net>

	* configure.in: bumped version to 0.0.5

2004-09-30 Bart Hakvoort  <gparted@users.sf.net>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc: added colored squares to the tree to highlight filesystems.

2004-09-29 Bart Hakvoort  <gparted@users.sf.net>

	* .cvsignore: ignore all projectfiles 

2004-09-29 Bart Hakvoort  <gparted@users.sf.net>

	* include/Dialog_Partition_Info.h,
	  src/Dialog_Partition_Info: removed Gtk::Label * mk_label( const Glib::ustring & text )
	* include/Partition.h: added inline Gtk::Label * mk_label( const Glib::ustring & text )