@@ -1,5 +1,12 @@
 2004-10-02 Bart Hakvoort  <gparted@users.sf.net>
 
+	* include/Device.h,
+	  include/Dialog_Progress.h,
+	  include/TreeView_Detail.h,
+	  include/VBox_VisualDisk.h: removed unnecessary #include <sstream>
+
+2004-10-02 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/VBox_VisualDisk.cc: fixed incorrect tooltip with unallocated space
 
 2004-10-02 Bart Hakvoort  <gparted@users.sf.net>
